-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 8
-
Component/s: core-libs
-
b117
-
Not verified
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8069597 | 7u85 | Robert Mckenna | P3 | Resolved | Fixed | b01 |
| JDK-8071603 | 7u80 | Robert Mckenna | P3 | Resolved | Fixed | b07 |
| JDK-8028883 | port-stage-ppc-aix | Chris Hegarty | P3 | Resolved | Fixed | master |
There are no checks for NULLs. e.g.
static void initializeInetClasses(JNIEnv *env)
{
static int initialized = 0;
if (!initialized) {
ni_iacls = (*env)->FindClass(env, "java/net/InetAddress");
ni_iacls = (*env)->NewGlobalRef(env, ni_iacls);
ni_ia4cls = (*env)->FindClass(env, "java/net/Inet4Address");
ni_ia4cls = (*env)->NewGlobalRef(env, ni_ia4cls);
ni_ia4ctrID = (*env)->GetMethodID(env, ni_ia4cls, "<init>", "()V");
initialized = 1;
}
}
- backported by
-
JDK-8028883 Inet[4|6]Address native initializing code should check field/MethodID values
-
- Resolved
-
-
JDK-8069597 Inet[4|6]Address native initializing code should check field/MethodID values
-
- Resolved
-
-
JDK-8071603 Inet[4|6]Address native initializing code should check field/MethodID values
-
- Resolved
-