8027961: Inet[4|6]Address native initializing code should check field/MethodID values Reviewed-by: chegar